add tests for ShopService